# scratch-compiler-3

./: Cargo.toml  README.md
src/: ast.rs  builtins.sc3  codegen.rs  debug.rs  diagnostics.rs  either.rs  hir.rs  main.rs  mir.rs  name.rs  parser.rs  ty.rs
src/hir/: lowering.rs
src/mir/: dce.rs  linearity.rs  lowering.rs  sroa.rs
src/ty/: layout.rs
tree-sitter-sc3/: biome.json  grammar.js  package.json  tree-sitter.json
tree-sitter-sc3/queries/: highlights.scm  indents.scm  locals.scm
