[package]
name = "scratch-compiler-3"
version = "0.1.0"
edition = "2024"

[dependencies]
beach_map = "0.3.0"
codemap = "0.1.3"
codemap-diagnostic = { git = "https://github.com/Johan-Mi/codemap-diagnostic", version = "0.1.1" }
cst = { git = "https://github.com/Johan-Mi/cst", version = "0.1.0" }
logos = { version = "0.15.0", default-features = false }
logos-derive = "0.15.0"
sb3-builder = { git = "https://github.com/Johan-Mi/sb3-builder", version = "0.1.0" }
