[package]
name = "scratch-compiler-3"
version = "0.1.0"
edition = "2024"

[lints]
rust.unsafe_code = "forbid"
rust.unused_results = "deny"
clippy.allow_attributes = "deny"
clippy.allow_attributes_without_reason = "deny"
clippy.let_underscore_untyped = "deny"
clippy.nursery = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }

[dependencies]
codemap = "0.1.3"
codemap-diagnostic = { git = "https://github.com/Johan-Mi/codemap-diagnostic", version = "0.1.1" }
cst = { git = "https://github.com/Johan-Mi/cst", version = "1.1.1" }
logos = { version = "0.15.0", default-features = false }
logos-derive = "0.15.0"
map = { git = "https://github.com/Johan-Mi/map", version = "0.1.0" }
sb3-builder = { git = "https://github.com/Johan-Mi/sb3-builder", version = "0.1.0" }
